clean online version

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description"
-    content="Portfolio de Lauriane Gélébart étudiante ingénieure IMAC. Travaux mélant multimédia, et programmation: du web à l'openGL, en passant par le design, et la vidéo.">
+    content="Portfolio de Lauriane Gélébart ingénieure web et multimédia, diplômée de l'ESIEE Paris, filière IMAC. Travaux mélant multimédia, et programmation: du web à l'openGL, en passant par le design, la 3D et la vidéo." />
+
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>fav.png">
   <title>
